# Micro-Service-API

./: .gitignore  pyproject.toml
Auth/: .gitignore  main.py
Auth/src/: __init__.py  config.py
Auth/src/api/: crud.py  jwt.py  schemas.py
Auth/src/core/models/: __init__.py  base.py
src/api/: views.py
src/core/: db.py
src/core/models/: auth.py
