[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "black>=25.1.0",
    "fastapi>=0.115.12",
    "fastapi-keycloak>=1.1.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.3",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
